# ros2_ws

./: .gitignore  README.md
src/autopatrol_interface/: CMakeLists.txt  package.xml
src/autopatrol_robot/: package.xml  setup.py
src/autopatrol_robot/autopatrol_robot/: patrol_node.py  speaker.py
src/autopatrol_robot/config/: patrol_config.yaml
src/autopatrol_robot/launch/: autopatrol.launch.py
src/chapt4_interfaces/: CMakeLists.txt  package.xml
src/chapt4_interfaces/srv/: FaceDetector.srv  Patrol.srv
src/demo_cpp_service/: CMakeLists.txt  package.xml
src/demo_cpp_service/launch/: actions.launch.py  demo.launch.py
src/demo_cpp_service/src/: patrol_client.cpp  turtle_control.cpp
src/demo_cpp_tf/: CMakeLists.txt  package.xml
src/demo_cpp_tf/src/: dynamic_tf_broadcaster.cpp  static_tf_broadcaster.cpp  tf_listener.cpp
src/demo_python_service/: package.xml  setup.py
src/demo_python_service/demo_python_service/: face_detect_client_node.py  face_detect_node.py  learn_face_detect.py
src/demo_python_tf/: package.xml  setup.py
src/demo_python_tf/demo_python_tf/: dynamic_tf_broadcaster.py  static_tf_broadcaster.py  tf_listener.py
src/fishbot_application/: package.xml  setup.py
src/fishbot_application/fishbot_application/: get_robot_pose.py  init_robot_pose.py  nav_to_pose.py  waypoint_follower.py
src/fishbot_description/: CMakeLists.txt  package.xml
src/fishbot_description/config/: bridge.yaml  display_robot_model.rviz  fishbot_ros2_controller.yaml
src/fishbot_description/launch/: display_robot.launch.py  gz_control.launch.py  gz_sim.launch.py
src/fishbot_description/urdf/: base.urdf.xacro  common_inertia.xacro  first_robot.urdf  first_robot.xacro  fishbot.ros2_control.xacro  fishbot.urdf.xacro  fishbot_base.urdf.xacro  (+1 more)
src/fishbot_navigation2/: CMakeLists.txt  debug_executed_commands.md  debug_think.md  package.xml
src/motion_control_system/: CMakeLists.txt  package.xml  spin_motion_plugins.xml
src/motion_control_system/include/motion_control_system/: motion_control_interface.hpp  spin_motion_controller.hpp
src/motion_control_system/src/: spin_motion_controller.cpp  test_plugin.cpp
src/nav2_custom_planner/: CMakeLists.txt  custom_planner_plugin.xml  package.xml
(+14 files in other folders)
