<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autopatrol_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zzuse@outlook.com">zzuse</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>nav2_simple_commander</depend>
  <depend>autopatrol_interface</depend>
  <exec_depend>python3-espeakng</exec_depend>
  <exec_depend>espeak-ng</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
